crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__pretix__src__pretix__control__templatetags__hierarkey_form.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/pretix/src/pretix/control/templatetags/hierarkey_form.py
---
tag_rules:
  "src.pretix.control.templatetags.hierarkey_form::tag::propagated":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: event
        required: true
        kind: Variable
        position: 0
      - name: url
        required: true
        kind: Variable
        position: 1
    supports_as_var: false
filter_arities: {}
block_specs:
  "src.pretix.control.templatetags.hierarkey_form::tag::propagated":
    end_tag: endpropagated
    intermediates: []
    opaque: false
