crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__pretix__src__pretix__control__templatetags__mail_settings_preview.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/pretix/src/pretix/control/templatetags/mail_settings_preview.py
---
tag_rules: {}
filter_arities:
  "src.pretix.control.templatetags.mail_settings_preview::filter::getattr":
    expects_arg: true
    arg_optional: false
  "src.pretix.control.templatetags.mail_settings_preview::filter::hasattr":
    expects_arg: true
    arg_optional: false
  "src.pretix.control.templatetags.mail_settings_preview::filter::split":
    expects_arg: true
    arg_optional: true
block_specs: {}
