crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__pretix__src__pretix__control__templatetags__order_overview.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/pretix/src/pretix/control/templatetags/order_overview.py
---
tag_rules: {}
filter_arities:
  "src.pretix.control.templatetags.order_overview::filter::togglesum":
    expects_arg: true
    arg_optional: true
block_specs: {}
